tests/codegen/pass/029-array-slice-simple.hyg
let arr: array {int} = array(2, 42);
let sliced: array {int} = arraySlice(arr, 1, 2);

let y: int = arrayElem(sliced, 0);

assert(y = 42);

arrayElem(arr, 1) <- 3;

assert(arrayElem(arr, 1) = 3);
assert(arrayElem(sliced, 0) = 3)