tests/codegen/fail/029-array-element-read-out-of-lower-bound.hyg
let arr: array {int} = array(2, 1);
let i: int = 2 - 3;
let y: int = arrayElem(arr, i);
println("should not print!")